variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:4: error: not found: value caseorange
while (2 * Biscuits != caseorange +1){
                       ^RunHalf:9: error: not found: value estSurIrange
  if (estSurIrange()){
      ^