variables.RunHalf.scala.code
var Biscuits : Int = 0
var caseOrange : Int = 0

while (2 * Biscuits != caseorange +1){
  avance()
  if (estSurBiscuit){
    Biscuits = Biscuits +1
  }
  if (estSurIrange()){
    caseOrange = caseOrange +1
  }
}
